Agentforce/force-app/main/default/objects/Account/fields/Account_Activities__c.field-meta.xml
<CustomField>
    <fullName>Account_Activities__c</fullName>
    <description>Identifies the Account Activities through DnB</description>
    <label>Account Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>