Agentforce/force-app/main/default/objects/Account/fields/Account_Approach__c.field-meta.xml
<CustomField>
    <fullName>Account_Approach__c</fullName>
    <description>AD-173 - field to identify the approach on the Account</description>
    <label>Account Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Defend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>