Agentforce/force-app/main/default/objects/Account/fields/Account_Contract_Risk__c.field-meta.xml
<CustomField>
    <fullName>Account_Contract_Risk__c</fullName>
    <label>Account Contract Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>