Agentforce/force-app/main/default/objects/Account/fields/Account_Contract_Status_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Contract_Status_f__c</fullName>
    <formula>IF( Count_of_Expired_Contracts__c &gt; 0, &quot;Expired&quot;,
			IF(Count_of_At_Risk_Contracts__c &gt; 0, &quot;At Risk&quot;,
						IF( Count_of_Active_Contracts__c &gt; 0, &quot;Live&quot;,
									IF( Count_of_Contracts_Pending_Mobilisation__c &gt; 0,&quot;Mobilisation&quot;,
									    NULL)
						    )
			    )
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contract Status</label>
    <type>Text</type>
</CustomField>