Agentforce/force-app/main/default/objects/Account/fields/Account_Description_Merge__c.field-meta.xml
<CustomField>
    <fullName>Account_Description_Merge__c</fullName>
    <label>Account Description Merge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>