Agentforce/force-app/main/default/objects/Account/fields/Account_Grade__c.field-meta.xml
<CustomField>
    <fullName>Account_Grade__c</fullName>
    <description>AD-172 - picklist field to identify the account grade</description>
    <label>Account Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>