Agentforce/force-app/main/default/objects/Account/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <displayFormat>AC-{000000}</displayFormat>
    <label>Account No</label>
    <type>AutoNumber</type>
</CustomField>