Agentforce/force-app/main/default/objects/Account/fields/Account_Objective__c.field-meta.xml
<CustomField>
    <fullName>Account_Objective__c</fullName>
    <label>Account Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Defend</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>