Agentforce/force-app/main/default/objects/Account/fields/Account_Overview__c.field-meta.xml
<CustomField>
    <fullName>Account_Overview__c</fullName>
    <description>AD-132 - field to capture information regarding the overview of the Account</description>
    <label>Account Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>