Agentforce/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global Strategic Account</fullName>
            </value>
            <value>
                <fullName>Domestic Strategic Account</fullName>
            </value>
            <value>
                <fullName>Standard Account</fullName>
                <default>true</default>
                <label>Standard Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>