Agentforce/force-app/main/default/objects/Account/fields/Account_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Account_Win_Rate__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Count_of_Closed_Won_Opps__c),
        ISBLANK(Count_of_Closed_Lost_Opps__c)
    ),
    0,
    IF(
        (Count_of_Closed_Lost_Opps__c + Count_of_Closed_Won_Opps__c) = 0, 
        0, 
        Count_of_Closed_Won_Opps__c / (Count_of_Closed_Lost_Opps__c + Count_of_Closed_Won_Opps__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>