Agentforce/force-app/main/default/objects/Account/fields/AccountCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AccountCaseSafeID__c</fullName>
    <description>Account CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountCaseSafeID</label>
    <type>Text</type>
</CustomField>