Agentforce/force-app/main/default/objects/Account/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <description>AD-128 - field to capture the active status of the Account</description>
    <label>Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>No Longer Trading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>