Agentforce/force-app/main/default/objects/Account/fields/Additional_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Number__c</fullName>
    <label>Additional Phone Number</label>
    <type>Phone</type>
</CustomField>