Agentforce/force-app/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>BillingStreet&amp;&quot;, &quot;&amp; BillingCity&amp;&quot;, &quot;&amp; BillingCountry&amp;&quot;, &quot;&amp; BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>