Agentforce/force-app/main/default/objects/Account/fields/Adhoc_Sales_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Sales_Last_12_Months__c</fullName>
    <label>Adhoc Sales Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>