Agentforce/force-app/main/default/objects/Account/fields/Adhoc_Won_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Won_Last_12_Months__c</fullName>
    <label>Adhoc Won Last 12 Months</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>7. Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Annual_Ad_hoc_GMPercentage__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.AnnualContractualGMPercentage__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Annual_Project_GMPercentage__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Closed_Last_12_Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>