Agentforce/force-app/main/default/objects/Account/fields/Annual_Revenue_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Bracket__c</fullName>
    <label>Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 5 M</fullName>
            </value>
            <value>
                <fullName>100 - 200 M</fullName>
            </value>
            <value>
                <fullName>5 - 50 M</fullName>
            </value>
            <value>
                <fullName>50 - 100 M</fullName>
            </value>
            <value>
                <fullName>&lt; 1 M</fullName>
            </value>
            <value>
                <fullName>&gt; 200 M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>