Agentforce/force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Identifies the name of the Accounts Bank through DnB</description>
    <label>Bank Name</label>
    <type>TextArea</type>
</CustomField>