Agentforce/force-app/main/default/objects/Account/fields/Billing_External_Ref__c.field-meta.xml
<CustomField>
    <fullName>Billing_External_Ref__c</fullName>
    <label>Billing External Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>