Agentforce/force-app/main/default/objects/Account/fields/Billing_External_Ref_Merged__c.field-meta.xml
<CustomField>
    <fullName>Billing_External_Ref_Merged__c</fullName>
    <label>Billing External Ref Merged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>