Agentforce/force-app/main/default/objects/Account/fields/Closed_Won_Value__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Value__c</fullName>
    <description>Sum of all Annual Revenue (Closed Won - Opportunities)</description>
    <label>Closed Won Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>