Agentforce/force-app/main/default/objects/Account/fields/Closed_Won_Value_L12M__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Value_L12M__c</fullName>
    <description>Sum of all Annual Revenue Last 12 Months</description>
    <label>Closed Won Value L12M</label>
    <summarizedField>Opportunity.Amount_Hidden__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>7. Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Closed_Last_12_Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>