Agentforce/force-app/main/default/objects/Account/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E2E-198 - Identifies that this account is a competing business</description>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>