Agentforce/force-app/main/default/objects/Account/fields/Contact_Numbers_Merged__c.field-meta.xml
<CustomField>
    <fullName>Contact_Numbers_Merged__c</fullName>
    <label>Contact Numbers</label>
    <type>TextArea</type>
</CustomField>