Agentforce/force-app/main/default/objects/Account/fields/Contract_End_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Risk_Level__c</fullName>
    <description>AD-829 to identify the &apos;Contract End Risk&apos; level against each Contract and identify the highest risk on the account</description>
    <label>Contract End Risk Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>