Agentforce/force-app/main/default/objects/Account/fields/Contract_Orderbook__c.field-meta.xml
<CustomField>
    <fullName>Contract_Orderbook__c</fullName>
    <label>Contract Orderbook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>