Agentforce/force-app/main/default/objects/Account/fields/Count_of_Active_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_Contacts__c</fullName>
    <label># Active Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>