Agentforce/force-app/main/default/objects/Account/fields/Count_of_Active_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_Opps__c</fullName>
    <description>Count of Active Opps</description>
    <label># Active Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>2. Prospect, 3. Solution, 4. Post-Submission</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sub_Stage__c</field>
        <operation>notEqual</operation>
        <value>2.1 Future Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>