Agentforce/force-app/main/default/objects/Account/fields/Count_of_Active_Sites__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_Sites__c</fullName>
    <label># Active Sites</label>
    <summaryFilterItems>
        <field>Site__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Site__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>