Agentforce/force-app/main/default/objects/Account/fields/Count_of_At_Risk_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_At_Risk_Contracts__c</fullName>
    <description>Populated by DLRS</description>
    <label># At Risk Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>