Agentforce/force-app/main/default/objects/Account/fields/Count_of_Closed_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Opps__c</fullName>
    <description>Count of Closed Opps</description>
    <formula>Count_of_Closed_Lost_Opps__c +  Count_of_Closed_Withdrawn_Opps__c +  Count_of_Closed_Won_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Closed Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>