Agentforce/force-app/main/default/objects/Account/fields/Count_of_Closed_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Won_Opps__c</fullName>
    <description>Count of Won Opps</description>
    <label># Closed Won Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>7. Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>