Agentforce/force-app/main/default/objects/Account/fields/Count_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Total Contacts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>