Agentforce/force-app/main/default/objects/Account/fields/Count_of_Contracts_Pending_Mobilisation__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Contracts_Pending_Mobilisation__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Contracts Pending Mobilisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>