Agentforce/force-app/main/default/objects/Account/fields/Count_of_Future_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Future_Opps__c</fullName>
    <description>Count of Future Opps</description>
    <label># Future Opps</label>
    <summaryFilterItems>
        <field>Opportunity.Sub_Stage__c</field>
        <operation>equals</operation>
        <value>2.1 Future Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>