Agentforce/force-app/main/default/objects/Account/fields/Count_of_Open_Active_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Active_Opps__c</fullName>
    <description>Count of Future &amp; Active Opps</description>
    <formula>Count_of_Active_Opps__c +  Count_of_Future_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Total No of Open &amp; Active Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>