Agentforce/force-app/main/default/objects/Account/fields/Count_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sites__c</fullName>
    <description>Count of Active and Inactive Sites</description>
    <formula>Count_of_Active_Sites__c +  Count_of_Inactive_Sites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Total No of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>