Agentforce/force-app/main/default/objects/Account/fields/Count_of_Sites_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sites_Marketing__c</fullName>
    <label># Sites (Marketing)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>