Agentforce/force-app/main/default/objects/Account/fields/Count_of_Terminated_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Terminated_Contracts__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Terminated Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>