Agentforce/force-app/main/default/objects/Account/fields/Count_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Count_Services_Provided__c</fullName>
    <label># Services Provided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>