Agentforce/force-app/main/default/objects/Account/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Lead</label>
    <type>Checkbox</type>
</CustomField>