Agentforce/force-app/main/default/objects/Account/fields/Credit_Limit_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Date_Temp__c</fullName>
    <description>Provides the Temp Credit Limit Date from DnB - requires formula to change the date format</description>
    <label>Credit Limit Date Temp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>