Agentforce/force-app/main/default/objects/Account/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>