Agentforce/force-app/main/default/objects/Account/fields/Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Spend__c</fullName>
    <description>AD-54 - currency field to capture the Current Spend against an Account for all active Contracts</description>
    <label>Current Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>