Agentforce/force-app/main/default/objects/Account/fields/Customer_Type_f__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_f__c</fullName>
    <formula>IF( OR(
				Count_of_Active_Contracts__c &gt; 0,
				 Count_of_Contracts_Pending_Mobilisation__c &gt; 0
    ),&quot;Existing&quot;,
		    	IF(AND(
							     Count_of_Active_Contracts__c &lt; 1,
							     Count_of_Terminated_Contracts__c &gt; 0
						    	), &quot;Former&quot;,
										&quot;Prospect&quot;
										)
			)
			
	/*		If any of the Accounts Contracts are Active/Mobilising then Existing.
	If not and there is at least 1 Terminated Contract and no current Active Contracts then show Former.
	If neither of the above then show Prospect */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>