Agentforce/force-app/main/default/objects/Account/fields/D_B_Failure_Score__c.field-meta.xml
<CustomField>
    <fullName>D_B_Failure_Score__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_failScor_natnlPrcntile__c</formula>
    <label>D&amp;B Failure Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>