Agentforce/force-app/main/default/objects/Account/fields/D_B_Hoovers_Industry_Description__c.field-meta.xml
<CustomField>
    <fullName>D_B_Hoovers_Industry_Description__c</fullName>
    <description>D&amp;B Hoovers Industry Class Description</description>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.DNB_Hoovers_Indtry_Class_Desc_Priority1__c</formula>
    <label>D&amp;B: Hoovers Industry Description</label>
    <type>Text</type>
</CustomField>