Agentforce/force-app/main/default/objects/Account/fields/D_B_IsStandalone__c.field-meta.xml
<CustomField>
    <fullName>D_B_IsStandalone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B : IsStandalone</label>
    <type>Checkbox</type>
</CustomField>