Agentforce/force-app/main/default/objects/Account/fields/Days_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Last_Activity__c</fullName>
    <label>Days Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>