Agentforce/force-app/main/default/objects/Account/fields/DB_Company_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>DB_Company_Annual_Revenue__c</fullName>
    <label>Company Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>