Agentforce/force-app/main/default/objects/Account/fields/DB_Company_Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>DB_Company_Registration_Source__c</fullName>
    <label>DB Company Registration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>