Agentforce/force-app/main/default/objects/Account/fields/DB_Control_Ownership_type_Description__c.field-meta.xml
<CustomField>
    <fullName>DB_Control_Ownership_type_Description__c</fullName>
    <label>Control Ownership type Description</label>
    <type>TextArea</type>
</CustomField>