Agentforce/force-app/main/default/objects/Account/fields/DB_creation_datetime__c.field-meta.xml
<CustomField>
    <fullName>DB_creation_datetime__c</fullName>
    <label>Creation Datetime</label>
    <type>DateTime</type>
</CustomField>