Agentforce/force-app/main/default/objects/Account/fields/DB_Domestic_Ultimate__c.field-meta.xml
<CustomField>
    <fullName>DB_Domestic_Ultimate__c</fullName>
    <label>D&amp;B: Is Domestic Ultimate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>