Agentforce/force-app/main/default/objects/Account/fields/DB_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS__c</fullName>
    <label>D&amp;B: D-U-N-S Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>