Agentforce/force-app/main/default/objects/Account/fields/DB_Global_Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>DB_Global_Ultimate_Account__c</fullName>
    <label>D&amp;B: Global Ultimate Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>